<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_av"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient"
        android:textStyle="bold"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearLayout_av"
        android:layout_below="@+id/toolbar_av">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            tools:context=".Activity.AccountVerification">

            <TextView
                android:id="@+id/textView_title_av"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/app_name"
                android:textColor="@color/textView_title_av"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/document_first_note"
                android:textColor="@color/textView_sub_av"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editText_userName_av"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/contact_us_bg"
                android:hint="@string/user_name"
                android:inputType="text"
                android:textSize="16sp"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/textView_sub_av"
                android:textColorHint="@color/textView_sub_av" />

            <EditText
                android:id="@+id/editText_email_av"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/contact_us_bg"
                android:hint="@string/email"
                android:textSize="16sp"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/textView_sub_av"
                android:textColorHint="@color/textView_sub_av" />

            <EditText
                android:id="@+id/editText_full_name_av"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/contact_us_bg"
                android:hint="@string/full_name"
                android:inputType="text"
                android:padding="10dp"
                android:textSize="16sp"
                android:singleLine="true"
                android:textColor="@color/textView_sub_av"
                android:textColorHint="@color/textView_sub_av" />

            <EditText
                android:id="@+id/editText_msg_av"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/contact_us_bg"
                android:gravity="top"
                android:hint="@string/your_message"
                android:maxLines="4"
                android:textSize="16sp"
                android:minLines="4"
                android:padding="10dp"
                android:textColor="@color/textView_sub_av"
                android:textColorHint="@color/textView_sub_av" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/attach_document"
                    android:textColor="@color/textView_title_av"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView_imageUpload"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="20dp"
                    android:clipToPadding="true"
                    app:cardCornerRadius="5dp">

                    <LinearLayout
                        android:id="@+id/linearLayout_image_av"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/textView_image_av"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:text="@string/add_thumbnail_file"
                            android:textColor="@color/toolbar"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/imageView_av"
                            android:layout_width="280dp"
                            android:layout_height="200dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="20dp"
                            android:contentDescription="@string/app_name"
                            android:scaleType="fitXY"
                            android:src="@drawable/placeholder_portable" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/document_note"
                android:textColor="@color/textView_sub_av"
                android:textSize="14sp" />

            <Button
                android:id="@+id/button_av"
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/home_button_bg"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/textView_av"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/no_data_found"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearLayout_av"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" />

</RelativeLayout>